Bug fix - Segment name cut off

--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -207,12 +207,13 @@ nav .button-collapse {
 
 #root .top_controls .quick-access input {
   border-radius: @white-theme-border-radius !important;
+  height: 36px;
 }
 
 .piwikSelector {
   span.title,
   a.title {
-    .font-default(13px, 12px);
+    .font-default(13px, 15px);
     text-transform: none;
   }
 }
